--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -40,5 +40,6 @@ $heading-title: #313131;
 $dark-body-color: #fff;
 $dark-body-bg: #191919;
 $dark-nav-color: #2D4263;
+$dark-nav-hover: #080d0e;
 $dark-post-title: #ECDBBA;
 $dark-heading-title: #ECDBBA;
